# offcode

./: Cargo.toml  Makefile  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: config.rs  main.rs  ollama.rs  tools.rs  tui.rs  ui.rs
