[package]
name = "offcode"
version = "0.1.1"
edition = "2021"
authors = ["sha0coder"]
license = "MIT"
repository = "https://github.com/sha0coder/offcode/"
documentation = "https://docs.rs/offcode"
description = "Offline AI coding assistant powered by Ollama"

[[bin]]
name = "offcode"
path = "src/main.rs"

[dependencies]
ureq       = { version = "2", features = ["json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
dirs       = "5"
ratatui    = "0.29"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
